[gd_scene load_steps=9 format=3 uid="uid://bi8ncn0cari4r"]

[ext_resource type="Texture2D" uid="uid://bu5uvrqvalhog" path="res://textures/GUI/main/shop/item_display.png" id="1"]
[ext_resource type="Theme" uid="uid://bvlk5mt2axnwa" path="res://themes/Gray.tres" id="1_vsp2y"]
[ext_resource type="Texture2D" uid="uid://76teubwpesh1" path="res://textures/GUI/main/shop/sell_btn.png" id="2"]
[ext_resource type="Texture2D" uid="uid://bdy3c4crcwfy1" path="res://textures/GUI/main/Blues.png" id="4"]
[ext_resource type="Texture2D" uid="uid://dlxc3y6yay4df" path="res://textures/items/barbed_club.png" id="5"]
[ext_resource type="Texture2D" uid="uid://d13hfawr2jnki" path="res://textures/GUI/main/shop/up_btn.png" id="7"]
[ext_resource type="Texture2D" uid="uid://bpeq5adg7q474" path="res://textures/GUI/main/shop/down_btn.png" id="8"]
[ext_resource type="Script" path="res://scripts/GUI/ShopItem.gd" id="9"]

[node name="ShopItem" type="TextureRect"]
offset_right = 46.0
offset_bottom = 30.0
theme = ExtResource("1_vsp2y")
texture = ExtResource("1")
script = ExtResource("9")

[node name="Item" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 4.0
offset_right = 10.0
offset_bottom = 12.0
texture = ExtResource("5")

[node name="Amount" type="Label" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 3.0
offset_right = 37.0
offset_bottom = 13.0
text = "x99"

[node name="UpBtn" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 37.0
offset_top = 3.0
offset_right = 44.0
offset_bottom = 8.0
texture_normal = ExtResource("7")

[node name="DownBtn" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 37.0
offset_top = 9.0
offset_right = 44.0
offset_bottom = 14.0
texture_normal = ExtResource("8")

[node name="Sell" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 18.0
offset_right = 44.0
offset_bottom = 28.0
texture_normal = ExtResource("2")

[node name="HBoxContainer" type="HBoxContainer" parent="Sell"]
layout_mode = 0
offset_left = 1.0
offset_right = 41.0
offset_bottom = 10.0
mouse_filter = 2
theme_override_constants/separation = 1
alignment = 1

[node name="Blues" type="TextureRect" parent="Sell/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("4")
stretch_mode = 3

[node name="Amount" type="Label" parent="Sell/HBoxContainer"]
layout_mode = 2
text = "*100"

[connection signal="pressed" from="UpBtn" to="." method="_on_UpBtn_pressed"]
[connection signal="pressed" from="DownBtn" to="." method="_on_DownBtn_pressed"]
[connection signal="pressed" from="Sell" to="." method="_on_Sell_pressed"]
